# MultiNet-v2.0

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  RUNME.md  evaluation_harness.py  example_usage.py  interactive_demo.py  model_interface.py  play_task.py  probe_vlm.py  pyproject.toml  run_eval.py  visualize_all_tilings.py  visualize_grid.py  visualize_grids_proper.py  vlm_sanity_check.py
adapters/: __init__.py  lmstudio_vlm_adapter.py  ollama_vlm_adapter.py  paligemma_adapter.py
cross_domain/: __init__.py  canonical_task_spec.py  domain_adapter.py  gridworld_adapter.py
docs/: README.md  gridworld_backends.md  immediate_system_design_tests_1_3.md  implementation_summary.md  interfaces.md  minigrid_backend.md  multigrid_backend.md  system_design.md  task_parser.md  technical_design.md  test_implementation_summary.md
gridworld/: __init__.py  actions.py  baselines.py  bootstrap.py  custom_env.py  demo.py  scorer_config.json  scoring.py  task_parser.py  task_spec.py  task_validator.py
gridworld/backends/: __init__.py  base.py  minigrid_backend.py  multigrid_backend.py
gridworld/envs/: __init__.py  tier_envs.py
gridworld/fixtures/: manifest.json  run_config.example.json
gridworld/runner/: __init__.py  grid_runner.py
interface/: __init__.py  actions_map.py  agents.py  config.py  coords.py  episode_log.py  feedback.py  loader.py  observation.py  one_shot.py  parser.py  prompt_strategies.py  querying.py  renderer.py  runner.py  telemetry.py
interface/agents/: __init__.py  api_keys.py  claude.py  kimi_k26.py  qwen35_vl.py  runner_messages.py
interface/smoke_tests/: plans.py  smoke_llm.py  smoke_prompting_observation_querying.py  smoke_replay.py
mazes/: __init__.py
mazes/exp_maze_images/: README.md
mazes/one_shot_example/: one_shot_example_14x14_dense_kr_sg_kb_2.json  one_shot_example_solution.json
mazes/results/: bfs_validation_10_results.json  greedy_validation_10_results.json  random_validation_10_results.json
mazes/validation_10/: V01_empty_room.json  V02_winding_corridor.json  V03_multi_path.json  V06_chain_ks.json  V10_distractor_chain.json
multigrid/: __init__.py  agent.py  base.py  core.py  demo.py  env.py  goals.py  rendering.py  test_multigrid.py  visibility.py  world.py
nl_domain/: __init__.py  nl_action_parser.py  nl_env.py
pipeline/: __init__.py  episode_metrics.py  reports.py  run_stage3.py
prompting_experiments/: __init__.py  condition_set_1_prompt.py  condition_set_2_observation_format.py  condition_set_3_context_window.py  condition_set_4_action_space.py  condition_set_4_querying_strategy.py  condition_set_5_in_context_learning.py  core.py  exp_design.py  preview_prompts.py  prompts.txt
prompts/: __init__.py  condition_set_1_prompt.py  condition_set_2_observation_format.py  condition_set_3_context_window.py  condition_set_4_action_space.py  condition_set_5_querying_strategy.py  condition_set_6_in_context_learning.py  exp_design.py
scorer/: __init__.py  aggregate.py  artifacts.py  config.py  io.py  runtime.py  runtime_signals.py  scorer_config.json  scoring.py  solvers.py  static.py  telemetry.py
scripts/: __init__.py  aggregate_scores.py  chat_smoke_test.py  demo_baselines.py  ollama_maze_shape_check.py  ollama_vision_check.py  probe_vlm.py  render_maze_jsons.py  render_multigrid_maze_jsons.py  render_ogbench_mazes.py  run_pipeline.py  score_json.py  validate_fixtures.py  visualize_scores.py  vlm_sanity_check.py
tests/: BFS_solver.py  maze_test_utils.py  test_M1_maze_types.py  test_S_maze_types.py  test_actions.py  test_backend_integration.py  test_chat_smoke_test.py  test_coordinates.py  test_distance.py  test_edge_cases.py  test_episode_metrics.py  test_exotic_tilings.py  test_import_isolation.py  test_interface_token_usage.py  test_model_interface.py  test_multigrid_partial_obs.py  test_partial_observability.py  test_performance.py  test_probe_vlm.py  test_prompt_observation_text.py  test_regression.py  test_reports.py  test_run_pipeline.py  test_scoring_system.py  test_standalone_surface.py  test_task_spec_validation.py  test_teleporters.py  test_tiling_generation.py  test_v2_schema_and_backends.py  test_vlm_sanity_check.py
(+306 files in other folders)
