[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multinet-v2-0"
version = "0.1.0"
description = "Gridworld and multigrid evaluation harness for multimodal model benchmarking."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "minigrid",
    "numpy",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
visual = [
    "matplotlib",
    "pygame",
]
hf = [
    "torch",
    "transformers",
]

[project.scripts]
multinet-run-eval = "run_eval:main"
multinet-chat-smoke = "chat_smoke_test:main"
multinet-probe-vlm = "probe_vlm:main"
multinet-ollama-vision-check = "ollama_vision_check:main"
multinet-ollama-maze-shape-check = "ollama_maze_shape_check:main"
multinet-vlm-sanity = "vlm_sanity_check:main"

[tool.setuptools]
include-package-data = true
py-modules = [
    "chat_smoke_test",
    "evaluation_harness",
    "model_interface",
    "ollama_maze_shape_check",
    "ollama_vision_check",
    "probe_vlm",
    "run_eval",
    "vlm_sanity_check",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "adapters*",
    "cross_domain*",
    "gridworld*",
    "mazes*",
    "multigrid*",
    "nl_domain*",
]

[tool.setuptools.package-data]
gridworld = ["tasks/**/*.json", "tasks/*.json"]
mazes = ["validation_10/**/*.json", "validation_10/*.json"]
