[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multinet-v2-0"
version = "0.1.0"
description = "Gridworld and multigrid evaluation harness for multimodal model benchmarking."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "minigrid",
    "numpy",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
visual = [
    "matplotlib",
    "pygame",
]
hf = [
    "torch",
    "torchvision",
    "transformers",
    "accelerate",
    "safetensors",
]

[project.scripts]
multinet-run-eval = "run_eval:main"
multinet-play-task = "play_task:main"
multinet-chat-smoke = "scripts.chat_smoke_test:main"
multinet-probe-vlm = "scripts.probe_vlm:main"
multinet-ollama-vision-check = "scripts.ollama_vision_check:main"
multinet-ollama-maze-shape-check = "scripts.ollama_maze_shape_check:main"
multinet-vlm-sanity = "scripts.vlm_sanity_check:main"
multinet-preview-prompts = "prompting_experiments.preview_prompts:main"
multinet-score-json = "scripts.score_json:main"

[tool.setuptools]
include-package-data = true
py-modules = [
    "evaluation_harness",
    "example_usage",
    "interactive_demo",
    "model_interface",
    "play_task",
    "run_eval",
    "visualize_all_tilings",
    "visualize_grid",
    "visualize_grids_proper",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "adapters*",
    "cross_domain*",
    "gridworld*",
    "interface*",
    "mazes*",
    "multigrid*",
    "prompting_experiments*",
    "scorer*",
    "scripts*",
]

[tool.setuptools.package-data]
gridworld = ["tasks/**/*.json", "tasks/*.json"]
mazes = ["validation_10/**/*.json", "validation_10/*.json"]
scorer = ["scorer_config.json"]
